force-app/main/default/objects/Behavior_Setting__mdt/Behavior_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Behavior Setting</label>
    <pluralLabel>Behavior Settings</pluralLabel>
</CustomObject>