force-app/main/default/objects/Behavior_Setting__mdt/fields/Sequential_Action_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Sequential_Action_Threshold__c</fullName>
    <description>The number of sequential actions required to trigger a pattern detection.</description>
    <label>Sequential Action Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>