force-app/main/default/objects/Behavior_Setting__mdt/fields/Stale_Case_Days__c.field-meta.xml
<CustomField>
    <fullName>Stale_Case_Days__c</fullName>
    <description>Number of days without activity before a case is considered stale.</description>
    <label>Stale Case Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>