force-app/main/default/objects/Behavior_Setting__mdt/fields/Stale_Opportunity_Days__c.field-meta.xml
<CustomField>
    <fullName>Stale_Opportunity_Days__c</fullName>
    <description>Number of days without activity before an opportunity is considered stale.</description>
    <label>Stale Opportunity Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>