force-app/main/default/objects/Behavior_Setting__mdt/fields/Unassigned_Lead_Age_Hours__c.field-meta.xml
<CustomField>
    <fullName>Unassigned_Lead_Age_Hours__c</fullName>
    <description>Number of hours a lead can sit in a queue before being flagged.</description>
    <label>Unassigned Lead Age (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>